<resources>
    <string name="app_name">S.A.R.A.H</string>

    <!-- MENU -->
    <string name="menu_speak">Sarah parle</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_help">Aide</string>
    <string name="menu_about">A propos</string>

    <string name="navigation_drawer_open">Ouvrir menu navigation</string>
    <string name="navigation_drawer_close">Fermer menu navigation</string>
    <!-- PAGE HOME -->
    <string name="home_text">Que puis-je faire pour vous ?</string>
    <string name="tap_on_mic">Appuyez pour parler</string>
    <string name="textLog">Logs</string>
    <string name="send_request">Requête envoyé !</string>
    <string name="you_say">Vous avez dit:\n</string>
    <string name="speech_prompt">Parlez</string>

    <!-- PAGE SPEAK -->
    <string name="button4Speak">Parle</string>
    <string name="textSpeak">Fait parler S.A.R.A.H</string>

    <!-- PAGE A PROPOS -->
    <string name="about_text">
        <b>Qu\'est-ce que c\'est ?</b>
        \n\n

        Cette application est un client pour S.A.R.A.H.\n
        Elle vous permet d\'utiliser S.A.R.A.H via votre téléphone/tablette. Elle est compatible avec le plugin Scribe.\n\n

        <b>Comment ça fonctionne ?</b>
        \n\n
        
        L\'application va récupéré ce qu\'a compris la reconnaissance Google puis va envoyer une première requête pour Scribe (si vous avez le plugin) et une seconde pour l\'émulation.\n
        Puis l\'application vous retournera ensuite la réponse de S.A.R.A.H.\n
    </string>

    <!-- PAGE HELP -->
    <string name="help_text">
        <b>Les pré-requis:</b>
        \n\n
        S.A.R.A.H d\'installé et de lancé.\n
        Les ports de votre box ouverts si vous voulez utiliser cette application en dehors de chez vous.\n
        Avoir configurer les paramètres de connexion sur l\'application.\n
        Si vous utilisez Scribe, vous deverez très légèrement modifier le plugin (+ d\'infos sur le github) et l\'activez le via les paramètres.\n\n

        <b>Besoin d\'aide ?</b>
        \n\n
        Si vous avez des soucis pour l\'installation ou autre, n\'hésitez pas à aller sur https://github.com/pyozer pour plus de renseignements. \n\n
    </string>

    <!-- PAGE PARAMETRE -->

    <!-- Server side settings -->
    <string name="pref_header_scribe">Scribe</string>

    <string name="pref_scribe">Utilisez vous scribe ?</string>
    <string name="pref_scribe_summuray">Si vous utilisez scribe</string>
    <string name="pref_scribe_ip">Ip du serveur</string>
    <string name="pref_scribe_default_ip">192.168.0.1</string>
    <string name="pref_scribe_port">Port du serveur</string>
    <string name="pref_scribe_default_port">4300</string>

    <!-- Client side settings -->
    <string name="pref_header_client">Client</string>

    <string name="pref_client_clientIp">Ip du Client</string>
    <string name="pref_client_default_clientIp">192.168.0.1</string>
    <string name="pref_client_clientPort">Port du Client</string>
    <string name="pref_client_default_clientPort">8888</string>

    <!-- Others settings -->
    <string name="pref_header_others">Autres</string>

    <string name="pref_others_ttsreturn">Activer le retour TTS</string>
    <string name="pref_others_ttsreturn_summary">Activez le retour du son sur votre téléphone</string>
    <string name="pref_others_default_sarah_name">Sarah</string>
    <string name="pref_others_sarah_name">Nom de S.A.R.A.H</string>

    <string name="pref_ringtone_silent">Silent</string>

    <!-- ERREURS -->
    <string name="no_internet">Vérifiez votre connexion internet.</string>
    <string name="speech_not_supported">Votre téléphone ne supporte pas Speech To Text :/</string>
    <string name="say_again">Je n\'ai pas compris, répétez...</string>
    <string name="no_result">Aucune réponse</string>
    <string name="no_connexion_scribe">Impossible de se connecter à Scribe.\nVérifiez les paramètres serveur.</string>
    <string name="no_connexion_client">Impossible de se connecter à SARAH.\nVérifiez les paramètres client.</string>
    <string name="error_field_required">Veuillez saisir un texte</string>

</resources>
