<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_speak"
        android:orderInCategory="100"
        android:icon="@drawable/ic_record_voice_over_black_24dp"
        android:title="@string/menu_speak" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="200"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="300"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/menu_help"
        android:orderInCategory="400"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/menu_help" />
</menu>
